Estilo Pagina Principal
Terminando el diseño de barras de la pagina incial

--- a/Inicio.html
+++ b/Inicio.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="EstiloP.css">
 </head>     
     <body>
-        <div class="cuadrado">
+        <div class="superior">
             <p class="texto">Inicio</p>
             <img src="logohospital.png"alt="logo">
+            <button class="mi-boton">Inisiar Sesion</button>
         </div>
+        <div class="Inferior">
+            <img src="copyvista.png"alt="logo">
+        </div>
+        
     </body>
     
 </html>
