Estilo de Login
Este commit se basa en el estilo del css del login

--- a/Inicio.html
+++ b/Inicio.html
@@ -10,7 +10,7 @@
         <div class="superior">
             <p class="texto">Inicio</p>
             <img src="logohospital.png"alt="logo">
-            <button class="mi-boton">Inisiar Sesion</button>
+            <button class="mi-boton" onclick="location.href='Login.html'">Inisiar Sesion</button>
         </div>
         <div class="Inferior">
             <img src="copyvista.png"alt="logo">
