Actualización del fondo de Inicio de Sesión
Cambié el fondo de la página de inicio de sesión por un nuevo fondo y arreglé faltas de ortografía.

--- a/Inicio.html
+++ b/Inicio.html
@@ -10,7 +10,7 @@
         <div class="superior">
             <p class="texto">Inicio</p>
             <img src="logohospital.png"alt="logo">
-            <button class="mi-boton" onclick="location.href='Login.html'">Inisiar Sesion</button>
+            <button class="mi-boton" onclick="location.href='Login.html'">Iniciar Sesión</button>
         </div>
         <div class="Inferior">
             <img src="copyvista.png"alt="logo">
@@ -74,10 +74,10 @@
             </div>
             <div class="informacion_2">
             <h3>Chat de ayuda</h3>
-            <p class="ayuda">El chatayuda esta con la finalidad de ayudar a la dudas del usuario.</p>
+            <p class="ayuda">El chat ayuda esta con la finalidad de ayudar a la dudas del usuario.</p>
             </div>
             <br>
-            <div class="informacion_1"> Breve descripción del hospital</div>
+            <div class="informacion_1">Breve descripción del hospital</div>
             <div class="chatbot"></div> 
         </div>
     </body>
