--- a/Login.html
+++ b/Login.html
@@ -9,12 +9,12 @@
 <body>
   <div class="login-container">
     <h2>Inicio de sesión</h2>
-    <form>
+    <form action="login.php" method="POST">
       <label for="usuario">Usuario</label>
       <input type="text" id="usuario" name="usuario" required />
 
-      <label for="contrasena">Contraseña</label>
-      <input type="password" id="contrasena" name="contrasena" required />
+      <label for="contrasena">Cédula / ID</label>
+      <input type="text" id="contrasena" name="contrasena" required />
 
       <button type="submit">Ingresar</button>
     </form>
