--- a/Inicio.html
+++ b/Inicio.html
@@ -9,11 +9,11 @@
     <body>
         <div class="superior">
             <p class="texto">Inicio</p>
-            <img src="logohospital.png"alt="logo">
-            <button class="mi-boton" onclick="location.href='Login.html'">Iniciar Sesión</button>
+            <img src="Imagenes/logohospital.png"alt="logo">
+            <button class="mi-boton" onclick="location.href='Base de datos/login.html'">Iniciar Sesión</button>
         </div>
         <div class="Inferior">
-            <img src="copyvista.png"alt="logo">
+            <img src="Imagenes/copyvista.png"alt="logo">
         </div>
         <div class="grid">
             <div class="calendario">
