--- a/Base de datos/Login.html
+++ b/Base de datos/Login.html
@@ -13,7 +13,7 @@
       <label for="usuario">Usuario</label>
       <input type="text" id="usuario" name="usuario" required />
 
-      <label for="contrasena">Cédula / ID</label>
+      <label for="contrasena">Contraseña</label>
       <input type="text" id="contrasena" name="contrasena" required />
 
       <button type="submit">Ingresar</button>
