--- a/Pacientes/SegundaPagina.html
+++ b/Pacientes/SegundaPagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaludLab-Citas</title>
-    <link rel="stylesheet" href="SegundaPagina.css">
+    <link rel="stylesheet" href="../SegundaPagina.css">
 </head>
 <body>
  <button class="Robot"></button>
@@ -14,7 +14,7 @@
         <button class="Boton">Modificar Cita</button> 
         <p class="Texto">SaludLab</p>
 
-        <img src="logohospital.png"alt="logo"class="logo">
+        <img src="../Imagenes/logohospital.png"alt="logo"class="logo">
     </div>
     <h1 class="Cita">Citas</h1>
 <div class="tablas">
