--- a/Administradores/Pag_Admin.html
+++ b/Administradores/Pag_Admin.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina de Administracion</title>
+    <link rel="stylesheet" href="../admin.css">
 </head>
 <body>
+     <button class="Robot"></button>
+    <div class="superior">
+       
+        <button class="mi-boton">Usuario Pacientes</button>
+        <button class="Boton">Usuario Doctores</button> 
+        <p class="Texto">SaludLab</p>
+
+        <img src="../Imagenes/logohospital.png"alt="logo"class="logo">
+    </div>
+    <h1 class="Cita">Informacion</h1>
+
+      <div class="estadicticas"></div>
     
 </body>
 </html>
