--- a/Doctores/Pag_Medico.html
+++ b/Doctores/Pag_Medico.html
@@ -11,7 +11,7 @@
     <div class="superior">
        
         <button onclick="location.href='BuscarPac.html'" class="mi-boton">Pacientes</button>
-        <button  class="Boton">Agenda</button> 
+        <button  onclick="location.href='Agenda.html'"class="Boton">Agenda</button> 
         <p class="Texto">SaludLab</p>
 
         <img src="../Imagenes/logohospital.png"alt="logo"class="logo">
