--- a/Pacientes/SegundaPagina.html
+++ b/Pacientes/SegundaPagina.html
@@ -10,7 +10,7 @@
  <button class="Robot"></button>
     <div class="superior">
        
-        <button class="mi-boton">Agregar Cita</button>
+        <button onclick="location.href='Agenda.html'" class="mi-boton">Agregar Cita</button>
         <button class="Boton">Modificar Cita</button> 
         <p class="Texto">SaludLab</p>
 
