--- a/Pacientes/Agenda.html
+++ b/Pacientes/Agenda.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaludLab-Citas</title>
-    <link rel="stylesheet" href="../Doctores/Estilomedico.css">
-    <link rel="stylesheet" href="../Doctores/Agenda.css">
+    <link rel="stylesheet" href="Estilomedico.css">
+    <link rel="stylesheet" href="Agenda.css">
 </head>
 <body>
     <button class="Robot"></button>
