--- a/Pacientes/SegundaPagina.html
+++ b/Pacientes/SegundaPagina.html
@@ -15,6 +15,8 @@
         <p class="Texto">SaludLab</p>
 
         <img src="../Imagenes/logohospital.png"alt="logo"class="logo">
+        <button class="Ajustes"><img src="../Imagenes/Ajustes.png" alt="Ajustesimg"></button>
+        <button class="Atras"><img src="../Imagenes/atrasimg.png" alt="Atrasimg"></button>
     </div>
     <h1 class="Cita">Citas</h1>
 <div class="tablas">
