--- a/Doctores/Agendas.html
+++ b/Doctores/Agendas.html
@@ -28,8 +28,7 @@
     name="searchbar"
 
   />
-  <button class="Agregar"></button>
-
+    <button  onclick="location.href=''"class="Agregar">Agregar</button> 
 </div>
 
 
