--- a/Doctores/Agenda.html
+++ b/Doctores/Agenda.html
@@ -47,6 +47,6 @@
     <div class="calendario" id="calendario"></div>
 
 
-    <script src="calendario.js"></script>
+    <script src="calendario copy.js"></script>
 </body>
 </html>
