Correccion de errores
se corrigieron errores

--- a/Inicio.html
+++ b/Inicio.html
@@ -17,59 +17,12 @@
         </div>
         <div class="grid">
             <div class="calendario">
-           <h1>Calendario</h1>
-            <table>
-                <tr class="dias">
-                    <th>Lun</th>
-                    <th>Mar</th>
-                    <th>Mie</th>
-                    <th>Jue</th>
-                    <th>Vie</th>
-                    <th>Sab</th>
-                    <th>Dom</th>
-                </tr>
-                <tr>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-
-                </tr>
-                <tr>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-
-                </tr>
-                <tr>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-
-                </tr>
-                <tr>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-                   <th>   </th>
-
-                </tr>
-
-            </table>
+           <h1>Bienvenido</h1><br>
+           <h2>Este software ha sido desarrollado para mejorar la atención clínica en centros de salud públicos, agilizando los tiempos de espera y facilitando la organización hospitalaria.
+Nuestro objetivo es ofrecer una experiencia más eficiente, humana y ordenada tanto para los pacientes como para el personal médico.</h2><br>
+<h2>Esperamos que este espacio contribuya positivamente al cuidado de tu salud y al bienestar de tu comunidad.
+</h2>
+           
             
             </div>
             <div class="informacion_2">
@@ -77,7 +30,7 @@
             <p class="ayuda">El chat ayuda esta con la finalidad de ayudar a la dudas del usuario.</p>
             </div>
             <br>
-            <div class="informacion_1">Breve descripción del hospital</div>
+            <div class="informacion_1"></div>
             <div class="chatbot"></div> 
         </div>
     </body>
