--- a/Doctores/Agenda.html
+++ b/Doctores/Agenda.html
@@ -8,29 +8,19 @@
     <link rel="stylesheet" href="Agenda.css">
 </head>
 <body>
+
+       <button class="hamburger" onclick="toggleMenu()">☰</button>
+
+<nav id="menu" class="menu">
+    <ul>
+        <li><a href="../inicio.html">Inicio</a></li>
+        <li><a href="Pag_Medico.php">Atras</a></li>
+    </ul>
+</nav>
     <button class="Robot"></button>
 
     <div class="superior">
-       <div class="group">
-            <svg viewBox="0 0 24 24" aria-hidden="true" class="search-icon">
-                <g>
-                    <path d="M21.53 20.47l-3.66-3.66C19.195 
-                    15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 
-                    4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 
-                    5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 
-                    11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 
-                    7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
-                </g>
-            </svg>
-
-            <input
-                id="query"
-                class="input"
-                type="search"
-                placeholder="Buscar pacientes..."
-                name="searchbar"
-            />
-        </div>
+       
 
         <p class="Texto">SaludLab</p>
 
@@ -48,5 +38,10 @@
 
 
     <script src="calendario copy.js"></script>
+    <script>
+function toggleMenu() {
+    document.getElementById("menu").classList.toggle("show");
+}
+</script>
 </body>
 </html>
