--- a/Doctores/Agenda.html
+++ b/Doctores/Agenda.html
@@ -10,7 +10,7 @@
 <body>
 
        <button class="hamburger" onclick="toggleMenu()">☰</button>
-
+       <button class="anterior" onclick="location.href='SegundaPagina.php'"></button>
 <nav id="menu" class="menu">
     <ul>
         <li><a href="../inicio.html">Inicio</a></li>
