--- a/Inicio.html
+++ b/Inicio.html
@@ -20,6 +20,25 @@
         button { padding: 6px 10px; margin-left: 430px; cursor: pointer; margin-top: 10px; }
         #mensaje{ margin-left: 80px; margin-top: 10px; position:absolute; z-index: 2;}
         .chatbot h2{text-align: center;}
+        
+@media (max-width: 480px) {
+      #chatbox{
+        margin-left:39px;
+        height:300px;
+        width: 300px;
+    }
+    #mensaje{
+
+        margin-left: 39px;
+        width: 200px;
+
+    }
+    button{
+        margin-left: 280px;
+
+    }
+
+}
     </style>
 </head>     
     <body>
