arreglos en la pagina de admin

--- a/Base de datos/Login.html
+++ b/Base de datos/Login.html
@@ -14,7 +14,7 @@
       <input type="text" id="usuario" name="usuario" required />
 
       <label for="contrasena">Contraseña</label>
-      <input type="text" id="contrasena" name="contrasena" required />
+      <input type="password" id="contrasena" name="contrasena" required />
 
       <button type="submit">Ingresar</button>
     </form>
